[gd_scene load_steps=59 format=3 uid="uid://dbtngpjjtq15q"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_5d6pe"]
[ext_resource type="Texture2D" uid="uid://cwm6bd7qe5xoj" path="res://Assets/Characters/Wizard/Attack1.png" id="1_q7rex"]
[ext_resource type="Texture2D" uid="uid://cf6lfa8sv5evw" path="res://Assets/Characters/Wizard/Attack2.png" id="2_805e6"]
[ext_resource type="Texture2D" uid="uid://c4cvo5vwx018y" path="res://Assets/Characters/Wizard/Death.png" id="3_sm4x8"]
[ext_resource type="Script" path="res://Scripts/AttackArea.gd" id="3_xkfto"]
[ext_resource type="Texture2D" uid="uid://c7yn7j2d366dg" path="res://Assets/Characters/Wizard/Hit.png" id="4_v13p7"]
[ext_resource type="Texture2D" uid="uid://cwswl8ill2nr4" path="res://Assets/Characters/Wizard/Idle.png" id="5_br462"]
[ext_resource type="Texture2D" uid="uid://dltiwmr4t7wrb" path="res://Assets/Characters/Wizard/Fall.png" id="5_loyea"]
[ext_resource type="Texture2D" uid="uid://d17smm7mbo7jd" path="res://Assets/Characters/Wizard/Jump.png" id="6_miyla"]
[ext_resource type="Texture2D" uid="uid://whjnq6apbpay" path="res://Assets/Characters/Wizard/Run.png" id="7_x3eqt"]
[ext_resource type="PackedScene" uid="uid://chhpcgml6wr5j" path="res://Scenes/damagearea.tscn" id="10_ixfcn"]
[ext_resource type="PackedScene" uid="uid://dscd2t1klp80u" path="res://Scenes/Spell_Fireball.tscn" id="12_6vw3f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_47p6n"]
size = Vector2(100.875, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6l7j"]
atlas = ExtResource("1_q7rex")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_cti51"]
atlas = ExtResource("1_q7rex")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tftd"]
atlas = ExtResource("1_q7rex")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ihml"]
atlas = ExtResource("1_q7rex")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieq4g"]
atlas = ExtResource("1_q7rex")
region = Rect2(924, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_cldnt"]
atlas = ExtResource("1_q7rex")
region = Rect2(1155, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy3dq"]
atlas = ExtResource("1_q7rex")
region = Rect2(1386, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7jce"]
atlas = ExtResource("1_q7rex")
region = Rect2(1617, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7jk1"]
atlas = ExtResource("2_805e6")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uad5"]
atlas = ExtResource("2_805e6")
region = Rect2(924, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_01dln"]
atlas = ExtResource("2_805e6")
region = Rect2(1155, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6m0r"]
atlas = ExtResource("2_805e6")
region = Rect2(1386, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ac10"]
atlas = ExtResource("2_805e6")
region = Rect2(1617, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5uhm"]
atlas = ExtResource("3_sm4x8")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_leys1"]
atlas = ExtResource("3_sm4x8")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhksw"]
atlas = ExtResource("3_sm4x8")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tkh7"]
atlas = ExtResource("3_sm4x8")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g0aq"]
atlas = ExtResource("3_sm4x8")
region = Rect2(924, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y40b"]
atlas = ExtResource("3_sm4x8")
region = Rect2(1155, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7d7d"]
atlas = ExtResource("3_sm4x8")
region = Rect2(1386, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wldk"]
atlas = ExtResource("5_loyea")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo3vs"]
atlas = ExtResource("5_loyea")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1g30"]
atlas = ExtResource("4_v13p7")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0ydw"]
atlas = ExtResource("4_v13p7")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7ha5"]
atlas = ExtResource("4_v13p7")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjo81"]
atlas = ExtResource("4_v13p7")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_fho3x"]
atlas = ExtResource("5_br462")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxf28"]
atlas = ExtResource("5_br462")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxsop"]
atlas = ExtResource("5_br462")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b3er"]
atlas = ExtResource("5_br462")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iyyq"]
atlas = ExtResource("5_br462")
region = Rect2(924, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5ibq"]
atlas = ExtResource("5_br462")
region = Rect2(1155, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqpjg"]
atlas = ExtResource("6_miyla")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyuwl"]
atlas = ExtResource("6_miyla")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wtkp"]
atlas = ExtResource("7_x3eqt")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_iytsy"]
atlas = ExtResource("7_x3eqt")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkge6"]
atlas = ExtResource("7_x3eqt")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib0ef"]
atlas = ExtResource("7_x3eqt")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1fho"]
atlas = ExtResource("7_x3eqt")
region = Rect2(924, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf5eo"]
atlas = ExtResource("7_x3eqt")
region = Rect2(1155, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7uwg"]
atlas = ExtResource("7_x3eqt")
region = Rect2(1386, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlnuk"]
atlas = ExtResource("7_x3eqt")
region = Rect2(1617, 0, 231, 190)

[sub_resource type="SpriteFrames" id="SpriteFrames_4mshj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6l7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cti51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tftd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ihml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieq4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cldnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy3dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7jce")
}],
"loop": false,
"name": &"Attack_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7jk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uad5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01dln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6m0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ac10")
}],
"loop": false,
"name": &"Attack_2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5uhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_leys1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhksw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tkh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g0aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y40b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7d7d")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wldk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo3vs")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1g30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0ydw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7ha5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjo81")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fho3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxf28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxsop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b3er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iyyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5ibq")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqpjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyuwl")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wtkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iytsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkge6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib0ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1fho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf5eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7uwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlnuk")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dop77"]
size = Vector2(25, 74)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gri8v"]
bg_color = Color(0.035292, 0.511552, 0.283771, 1)

[node name="Player" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource("1_5d6pe")

[node name="AttackArea" parent="." instance=ExtResource("10_ixfcn")]
collision_layer = 0
collision_mask = 18
script = ExtResource("3_xkfto")
damage = 70

[node name="attack_2_area" type="CollisionShape2D" parent="AttackArea"]
light_mask = 262145
position = Vector2(70, -25)
shape = SubResource("RectangleShape2D_47p6n")
debug_color = Color(0.282519, 0.499322, 1, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9.5, -10)
sprite_frames = SubResource("SpriteFrames_4mshj")
animation = &"Hit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_dop77")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Node" type="Node" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = -41.0
offset_top = -60.0
offset_right = 59.0
offset_bottom = -33.0
scale = Vector2(1, -0.56)
theme_override_styles/fill = SubResource("StyleBoxFlat_gri8v")
max_value = 250.0
step = 1.0
show_percentage = false

[node name="Fireball" parent="." instance=ExtResource("12_6vw3f")]
visible = false
position = Vector2(200, 0)
scale = Vector2(2, 2)

[connection signal="input_event" from="." to="." method="_on_input_event_attack_1"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_2_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
